# agent-bench-v2

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  NODE_CONTRACT.md  PLAN.md  README.md  WORKFLOW_SPEC.md  config.example.yaml  config.yaml  package-lock.json  package.json  pyproject.toml  run.py  runner.py
caller/: __init__.py  call_agent.py
core/: __init__.py  config.py  models.py  prompts.py  serializers.py
docs/: enterprise-agent-test-orchestration.md
e2e_tmp/: e2e_app.py
execution/: __init__.py  artifacts.py  case_executor.py  connector.py  llm_node_execution.py  model_gateway.py  model_providers.py  models.py  preparation.py  repository.py  results.py  scheduler.py  targets.py  workflow_drafts.py  workflow_variables.py  workflows.py
inputs/: .sets_meta.json  testcases (3).xlsx  testcases.xlsx
parser/: __init__.py  agent_response.py
scripts/: build-workflow.mjs  migrate_tool_registry.py
storage/: __init__.py  artifacts.py  excel.py
tests/: test_agent_frontend.py  test_agent_live_integration.py  test_agent_migration.py  test_agent_runtime.py  test_artifact_store.py  test_case_executor.py  test_config.py  test_connector.py  test_excel_repository.py  test_execution_frontend.py  test_faq_frontend.py  test_files.py  test_llm_node_runs.py  test_llm_node_runs_live.py  test_local_clipboard.py  test_model_gateway.py  test_model_gateway_live.py  test_model_providers.py  test_model_providers_frontend.py  test_python_editor_bundle.py  test_run_events.py  test_run_preparation.py  test_run_repository.py  test_run_stream.py  test_runs_api.py  test_set_meta.py  (+23 more)
(+57 files in other folders)
