[project]
name = "agent-bench"
version = "0.1.0"
description = "Agent evaluation pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.28,<1",
    "langchain>=1.3,<2",
    "langchain-deepseek>=1.1,<2",
    "openpyxl>=3.1,<4",
    "pydantic>=2.12,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "requests>=2.32,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
