[project]
name = "agent-bench"
version = "0.1.0"
description = "Local Excel test set management web app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx[socks]>=0.28,<1",
    "langchain>=1.0,<2",
    "langchain-anthropic>=1.0,<2",
    "langchain-deepseek>=1.1,<2",
    "langchain-google-genai>=4.0,<5",
    "langchain-openai>=1.0,<2",
    "langchain-tavily>=0.2.18",
    "openpyxl>=3.1,<4",
    "pydantic>=2.12,<3",
    "python-multipart>=0.0.18,<1",
    "pyyaml>=6.0,<7",
    "rich>=13.9,<15",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<10",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
testpaths = ["tests"]
pythonpath = ["."]
